--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "Delano Junior",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "concurrently": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
